# src/main/java/de/ni0/chronoscope/mapper/IdentityMapper.java
@@ -2,11 +2,12 @@ package de.ni0.chronoscope.mapper;
 
 import java.util.Set;
 
-import de.ni0.chronoscope.controller.dto.response.IdentityResponse;
-import de.ni0.chronoscope.model.Identity;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.MappingConstants;
+
+import de.ni0.chronoscope.controller.dto.response.IdentityResponse;
+import de.ni0.chronoscope.model.Identity;
 
 /**
  * MapStruct mapper for identity responses.
@@ -25,5 +26,7 @@ public interface IdentityMapper {
     @Mapping(target = "accounts", source = "identity.accounts")
     @Mapping(target = "adminOrganizations", source = "adminOrganizations")
     @Mapping(target = "organizations", source = "organizations")
+    @Mapping(target = "language", source = "identity.language")
+    @Mapping(target = "theme", source = "identity.theme")
     IdentityResponse toResponse(Identity identity, Set<String> adminOrganizations, Set<IdentityResponse.Organization> organizations);
 }
